js/babel-plugin-sprockets-commoner-internal/test/errors/coffee-multi-assignments/options.js
var path = require('path');

var rootDir = path.resolve(__dirname, './');

module.exports = {
  sourceRoot: rootDir,
  error: "Multiple identifiers found in " + __dirname + "/multi.coffee"
};
